	PR middle-end/49640 	* gimplify.c (gimplify_compound_lval): For last 2 ARRAY_*REF 	operands and last COMPONENT_REF operand call gimplify_expr on it 	if non-NULL.

* gcc.dg/gomp/pr49640.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@175967 138bc75d-0d04-0410-961f-82ee72b054a4